<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IntentActivity" >

    <Button
        android:id="@+id/componentname_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/componentname_test" />
    
    <Button
        android:id="@+id/custom_action_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_action_test" />
    
    <Button
        android:id="@+id/system_action_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_action_test" />
    
    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home" />
    
    <Button
        android:id="@+id/system_action_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_action_dial" />
    
    <Button
        android:id="@+id/custom_data_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_data_test" />
    
    <Button
        android:id="@+id/custom_category_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_category_test" />
    
    <Button
        android:id="@+id/implicit_intent_clash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_clash" />

</LinearLayout>
