<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/send_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_broadcast" />
    
    <TextView
        android:text="@string/notification_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/notification_test_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_test_send" />
    
    <Button
        android:id="@+id/notification_test_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_test_cancel" />
    
    <TextView
        android:text="@string/alarmmanager_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/alarm_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_set" />
    
    <Button
        android:id="@+id/alarm_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_cancel" />

</LinearLayout>
