<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/start_myservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_myservice" />
    <Button
        android:id="@+id/stop_myservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_myservice" />
    <Button
        android:id="@+id/bind_myservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_myservice" />
    <Button
        android:id="@+id/unbind_myservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbind_myservice" />

</LinearLayout>
