<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventTestActivity" >
    
	<TableRow
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	        
        <TextView
		    android:id="@+id/labelusername"
		    android:text="@string/username"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
	
		<EditText
		    android:id="@+id/username"
		    android:inputType="text"
			android:layout_height="wrap_content"
			android:layout_weight="6" />
	
	</TableRow>
	
	<TableRow
	    android:layout_width="match_parent">
		
	    <TextView
	        android:text="@string/userpwd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
		
		<EditText
		    android:id="@+id/userpwd"
		    android:inputType="text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="6" />
	</TableRow>
	
	<TableRow
	    android:layout_width="match_parent">
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/autologin" />
	    <CheckBox
	        android:id="@+id/isautologin" />
	</TableRow>
	
	<TableRow
	    android:layout_width="match_parent">
	    <Button
	        android:id="@+id/login"
	        android:text="@string/login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    
	</TableRow>
    

</TableLayout>
