<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WidgetActivity" >
	
    <Button
        android:id="@+id/dialog_progressbar"
        android:text="@string/dialog_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/title_progressbar"
        android:text="@string/title_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <ProgressBar
        android:id="@+id/horizen_progressbar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress="50" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/increase"
	        android:text="@string/increase"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <Button
	        android:id="@+id/decrease"
	        android:text="@string/decrease"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    
    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>
