<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WidgetActivity" >
	
    <TabHost
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" ></TabHost>
    
    <TextView
        android:id="@+id/tabtest_tv1"
        android:text="@string/tab_test_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tabtest_tv2"
        android:text="@string/tab_test_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tabtest_tv3"
        android:text="@string/tab_test_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</FrameLayout>
