<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ActivDemoActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input" />
	<EditText
	    android:id="@+id/contactsname"
	    android:inputType="text"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	<Button
	    android:id="@+id/confirm"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
	
	<Button
	    android:id="@+id/activity_lifecycle"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_lifecycle" />
	
</LinearLayout>
