<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FileActivity" >

    <TextView
        android:id="@+id/label_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filename" />
    <EditText
        android:id="@+id/filename"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_filename" />
    <TextView
        android:id="@+id/label_filecontent"
        android:text="@string/filecontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filename" />
    <EditText
        android:id="@+id/filecontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_filecontent"
        android:minLines="3" />
	<Button
	    android:id="@+id/save"
	    android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filecontent" />
</RelativeLayout>
