<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SMSActivity" >

    <TextView
        android:id="@+id/mobilelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobilelabel" />
    
    <EditText
        android:id="@+id/mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/mobilelabel"
        android:shadowColor="#FF0000"
        android:shadowDx="1"
        android:hint="@string/mobilelabel" />
    
    <TextView
        android:id="@+id/contentlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:text="@string/contentlabel" />
    
    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentlabel"
        android:minLines="3"
        android:hint="@string/contentlabel" />
    
    <Button
        android:id="@+id/sendbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/content"
        android:layout_alignParentRight="true"
        android:text="@string/sendbutton" />

</RelativeLayout>
