<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/action_overflow"
        android:title="@string/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item
        android:title="File"
        android:showAsAction="always">
        <menu>
            <group
                android:checkableBehavior="none">
                <item
                    android:title="New"></item>
                <item
                    android:title="Open"></item>
                <item
                    android:title="Save"></item>
            </group>
            
        </menu>
    </item>
    
    <item
        android:title="Edit"
        android:showAsAction="always">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:title="Cut"></item>
                <item
                    android:title="Copy"></item>
                <item
                    android:title="Paste"></item>
            </group>
            
        </menu>
    </item>
    
    <item
        android:title="Help"
        android:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/about"
                    android:title="About"></item>
                <item
                    android:id="@+id/exit"
                    android:title="Exit"></item>
            </group>
            
        </menu>
    </item>
    
</menu>
